--- a/main/public/index.html
+++ b/main/public/index.html
@@ -11,11 +11,20 @@
 <script>
     //fecth movies 
     fetch('/movies')
-        .then(res=>res.json())
-        .then(movies => {
-        const list = document.getElementById('movie-list');})
+    .then(res => res.json())
+    .then(movies => {
+      const list = document.getElementById('movie-list');
 
-
+      movies.forEach(movie => {
+        const li = document.createElement('li');
+        li.textContent = movie.title;
+        list.appendChild(li);
+      });
+    })
+    .catch(error => {
+      console.error('Error fetching movies:', error);
+    });
+</script>
 
 </script>
 </body>
