--- a/main/public/index.html
+++ b/main/public/index.html
@@ -3,124 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Movie Recommender</title>
-  <style>
-    /*dark-theme*/
-    body {
-      margin: 0;
-      background-color: #141414;
-      color: #fff;
-      font-family: Arial, sans-serif;
-    }
-
-    h1 {
-      padding: 20px;
-      font-size: 32px;
-    }
-
-    /*grid layout for movie cards*/
-    .movie-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      gap: 20px;
-      padding: 0 20px 40px;
-    }
-
-    /*each card*/
-    .card {
-      background-color: #1e1e1e;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
-      cursor: pointer;
-    }
-
-    .card:hover {
-      transform: scale(1.05);
-    }
-
-    .card img {
-      width: 100%;
-      height: 225px;
-      object-fit: cover;
-      display: block;
-    }
-
-    .card-title {
-      padding: 10px;
-      font-size: 14px;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
  <h1>🎬 Movie Recommender</h1>
   <div id="movie-list" class="movie-grid"></div>
 
 
-<script>
-  const startTime = Date.now();
-    //fecth movies 
-    fetch('/movies')
-  .then(res => res.json())
-  .then(movies => {
-    const grid = document.getElementById('movie-list');
-  
-    //i added this slicing here cos my brother constanly freezes if it loads all data set with layouts and stuff
-    movies.slice(0,100).forEach(movie => {
-      const card = document.createElement('div');
-      card.className = 'card';
-
-      // Generate a background color (based on title)
-       const color = stringToColor(movie.title || '');
-      card.style.backgroundColor = color;
-
-      //title
-      const title = document.createElement('div');
-      title.className = 'card-title';
-      title.textContent = movie.title;
-
-      //add to card
-      
-      card.appendChild(title);
-      grid.appendChild(card);
-
-      // create and save session
-      card.addEventListener('click', () => {
-        const secondsSpent = Math.floor((Date.now() - startTime) / 1000);
-
-        const session = JSON.parse(localStorage.getItem('sessionHistory')) || {
-          visitedItems: [],
-          clicks: [],
-          timeSpent: {}
-        };
-
-        session.visitedItems.push(movie.id);
-        session.clicks.push(`item_${movie.id}`);
-        session.timeSpent[`item_${movie.id}`] = secondsSpent;
-
-        localStorage.setItem('sessionHistory', JSON.stringify(session));
-        console.log('Saved session:', session);
-
-        
-      });
-    });
-  })
-  .catch(error => {
-    console.error('Error fetching movies:', error);
-  });
-  function stringToColor(str) {
-    let hash = 0;
-    for (let i = 0; i < str.length; i++) {
-      hash = str.charCodeAt(i) + ((hash << 5) - hash);
-    }
-    const c = (hash & 0x00FFFFFF)
-      .toString(16)
-      .toUpperCase();
-    return `#${'00000'.substring(0, 6 - c.length) + c}`;
-  }
-
-
-</script>
+<script src="app.js"></script>
 </body>
 </html>
