extract history and filter for recommendation logic

--- a/main/public/movie.html
+++ b/main/public/movie.html
@@ -23,7 +23,7 @@
 
     <!-- Right column -->
     <div class="side-panel">
-      <h2>Related Links</h2>
+      <h2>You might also like: </h2>
       <ul id="movie-links">
         <li><a href="#">Official Homepage</a></li>
         <li><a href="#">IMDB</a></li>
